--- a/index.html
+++ b/index.html
@@ -415,28 +415,33 @@
             <div class="container">
                 <div class="content-section">
                     <h3 class="title">FAQ</h3>
-                    <!-- <p class="sub-title">We are a team of professionals in the wood processing and the creation of
+                    <p class="sub-title">We are a team of professionals in the wood processing and the creation of
                         wooden furniture of the highest class
-                    </p> -->
-                    <p class="sub-title">Bài học cột sống :)</p>
+                    </p>
+                    
                 </div>
                 <div class="accor_item">
-                    <button class="accor-btn">Làm sao không làm mà vẫn có ăn?</button>
+                    <button class="accor-btn">Section 1</button>
                     <div class="panel">
-                        <p>Xã hội lày :) chỉ có nàm chịu khó, cần cù thì bù xiêng lăng, chỉ có nàm thì mới có ăn </br>
-                            Những cái noại không nàm mà đòi có ăn thì ăn ... :) lói thế cho ló nhanh</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quam, qui dicta
+                                    voluptas ratione quidem, unde, aut quisquam sed repudiandae doloremque amet odio
+                                    harum expedita dolor culpa dolorum ullam eveniet?</p>
                     </div>
                 </div>
                 <div class="accor_item">
-                    <button class="accor-btn">Trứng có trước hay gà có trước?</button>
+                    <button class="accor-btn">Section 2</button>
                     <div class="panel">
-                        <p>Đoán xem ;)</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quam, qui dicta
+                                    voluptas ratione quidem, unde, aut quisquam sed repudiandae doloremque amet odio
+                                    harum expedita dolor culpa dolorum ullam eveniet?</p>
                     </div>
                 </div>
                 <div class="accor_item">
-                    <button class="accor-btn">Ngày mai ăn gì?</button>
+                    <button class="accor-btn">Section 3</button>
                     <div class="panel">
-                        <p> Việc hôm nay chớ để ngày mai, chạy xong deadline ăn gì thì ăn.</p>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quam, qui dicta
+                                    voluptas ratione quidem, unde, aut quisquam sed repudiandae doloremque amet odio
+                                    harum expedita dolor culpa dolorum ullam eveniet?</p>
                     </div>
                 </div>
             </div>
