--- a/index.html
+++ b/index.html
@@ -447,14 +447,14 @@
             </div>
         </section>
 
-        <section class="slide-img">
+        <!-- <section class="slide-img">
             <div class="more__img">
                 <img src="./img/img-1.jpg" alt="">
                 <img src="./img/img-2.jpg" alt="">
                 <img src="./img/img-3.jpg" alt="">
                 <img src="./img/img-4.jpg" alt="">
             </div>
-        </section>
+        </section>-->
 
     </main>
 
