--- a/index.html
+++ b/index.html
@@ -45,9 +45,9 @@
                     </div>
 
                     <div class="lang__options">
-                        <a href="#">JP</a>
-                        <a href="#">NA</a>
-                        <a href="#">VN</a>
+                        <a href="javascript:void(0)">JP</a>
+                        <a href="javascript:void(0)">NA</a>
+                        <a href="javascript:void(0)">VN</a>
                     </div>
                 </div>
                 <div class="mobile-btn">
@@ -103,11 +103,8 @@
                 <div class="container-fluid">
                     <div class="left">
                         <span>01</span>
-                        <ul class="dots">
-                            <li class="active"></li>
-                            <li></li>
-                            <li></li>
-                        </ul>
+                        <ol class="dots">
+                        </ol>
                     </div>
 
                     <div class="center">
@@ -263,22 +260,32 @@
                         the creation of wooden furniture of the highest class
                     </p>
                 </div>
-                <div class="gallery__list">
-                    <div class="gallery__list-item img-1">
-                        <img src="./img/gall-1.jpg" alt="gall-1">
-                    </div>
-                    <div class="gallery__list-item img-2">
-                        <img src="./img/gall-2.jpg" alt="gall-2">
-                    </div>
-                    <div class="gallery__list-item img-3">
-                        <img src="./img/gall-3.jpg" alt="gall-3">
-                    </div>
-                    <div class="gallery__list-item img-4">
-                        <img src="./img/gall-4.jpg" alt="gall-4">
-                    </div>
-                    <div class="gallery__list-item img-5">
-                        <img src="./img/gall-5.jpg" alt="gall-5">
-                    </div>
+                <div class="gallery__list" itemscope data-pswp-uid="1">
+                    <figure class="gallery__list-item img-1">
+                        <a href="./img/gall-1-1.jpg" data-size="640x853">
+                            <img src="./img/gall-1.jpg" alt="gall-1">
+                        </a>
+                    </figure>
+                    <figure class="gallery__list-item img-2">
+                        <a href="./img/gall-2-1.jpg" data-size="640x427">
+                            <img src="./img/gall-2.jpg" alt="gall-2">
+                        </a>
+                    </figure>
+                    <figure class="gallery__list-item img-3">
+                        <a href="./img/gall-3-1.jpg" data-size="640x960">
+                            <img src="./img/gall-3.jpg" alt="gall-3">
+                        </a>
+                    </figure>
+                    <figure class="gallery__list-item img-4">
+                        <a href="./img/gall-4-1.jpg" data-size="640x427">
+                            <img src="./img/gall-4.jpg" alt="gall-4">
+                        </a>
+                    </figure>
+                    <figure class="gallery__list-item img-5">
+                        <a href="./img/gall-5-1.jpg" data-size="640x427">
+                            <img src="./img/gall-5.jpg" alt="gall-5">
+                        </a>
+                    </figure>
                 </div>
             </div>
         </section>
@@ -418,43 +425,51 @@
                     <p class="sub-title">We are a team of professionals in the wood processing and the creation of
                         wooden furniture of the highest class
                     </p>
-                    
+
                 </div>
                 <div class="accor_item">
                     <button class="accor-btn">Section 1</button>
                     <div class="panel">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quam, qui dicta
-                                    voluptas ratione quidem, unde, aut quisquam sed repudiandae doloremque amet odio
-                                    harum expedita dolor culpa dolorum ullam eveniet?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam illo beatae laudantium
+                            eligendi repellendus dolorem quas exercitationem debitis fugiat quasi facere accusamus, ad
+                            facilis vero ducimus dolores saepe tempora distinctio!</p>
                     </div>
                 </div>
                 <div class="accor_item">
                     <button class="accor-btn">Section 2</button>
                     <div class="panel">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quam, qui dicta
-                                    voluptas ratione quidem, unde, aut quisquam sed repudiandae doloremque amet odio
-                                    harum expedita dolor culpa dolorum ullam eveniet?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam illo beatae laudantium
+                            eligendi repellendus dolorem quas exercitationem debitis fugiat quasi facere accusamus, ad
+                            facilis vero ducimus dolores saepe tempora distinctio!</p>
                     </div>
                 </div>
                 <div class="accor_item">
                     <button class="accor-btn">Section 3</button>
                     <div class="panel">
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatem quam, qui dicta
-                                    voluptas ratione quidem, unde, aut quisquam sed repudiandae doloremque amet odio
-                                    harum expedita dolor culpa dolorum ullam eveniet?</p>
+                        <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsam illo beatae laudantium
+                            eligendi repellendus dolorem quas exercitationem debitis fugiat quasi facere accusamus, ad
+                            facilis vero ducimus dolores saepe tempora distinctio!</p>
                     </div>
                 </div>
             </div>
         </section>
 
-        <!-- <section class="slide-img">
-            <div class="more__img">
-                <img src="./img/img-1.jpg" alt="">
-                <img src="./img/img-2.jpg" alt="">
-                <img src="./img/img-3.jpg" alt="">
-                <img src="./img/img-4.jpg" alt="">
+        <section class="slide-img">
+            <div class="more__img main-carousel">
+                <div class="carousel-cell">
+                    <img src="./img/img-1.jpg" alt="">
+                </div>
+                <div class="carousel-cell">
+                    <img src="./img/img-2.jpg" alt="">
+                </div>
+                <div class="carousel-cell">
+                    <img src="./img/img-3.jpg" alt="">
+                </div>
+                <div class="carousel-cell">
+                    <img src="./img/img-4.jpg" alt="">
+                </div>
             </div>
-        </section> -->
+        </section>
 
     </main>
 
@@ -485,7 +500,47 @@
         </div>
     </div>
 
-    <script src="./dest/main.js"></script>
+    <div class="pswp" tabindex="-1" role="dialog" aria-hidden="true">
+        <div class="pswp__bg"></div>
+        <div class="pswp__scroll-wrap">
+            <div class="pswp__container">
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+                <div class="pswp__item"></div>
+            </div>
+            <div class="pswp__ui pswp__ui--hidden">
+                <div class="pswp__top-bar">
+                    <div class="pswp__counter"></div>
+                    <button class="pswp__button pswp__button--close" title="Close (Esc)"></button>
+                    <button class="pswp__button pswp__button--share" title="Share"></button>
+                    <button class="pswp__button pswp__button--fs" title="Toggle fullscreen"></button>
+                    <button class="pswp__button pswp__button--zoom" title="Zoom in/out"></button>
+                    <div class="pswp__preloader">
+                        <div class="pswp__preloader__icn">
+                            <div class="pswp__preloader__cut">
+                                <div class="pswp__preloader__donut"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="pswp__share-modal pswp__share-modal--hidden pswp__single-tap">
+                    <div class="pswp__share-tooltip"></div>
+                </div>
+                <button class="pswp__button pswp__button--arrow--left" title="Previous (arrow left)">
+                </button>
+                <button class="pswp__button pswp__button--arrow--right" title="Next (arrow right)">
+                </button>
+                <div class="pswp__caption">
+                    <div class="pswp__caption__center"></div>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <!-- js libs -->
+    <script src="./dest/jsmain.min.js"></script>
+    <!-- <script src="./dest/main.js"></script> -->
+    <script src="./dest/mainjquery.js"></script>
 </body>
 
 </html>
