--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <!-- FB SHARE -->
     <meta property="og:locale" content="vi" />
     <meta property="og:type" content="article" />
-    <meta property="og:title" content="Trang Chủ" />
+    <meta property="og:title" content="Wooder" />
     <meta property="og:description" content="" />
     <meta property="og:url" content="vi" />
     <meta property="og:site_name" content="vi" />
@@ -468,6 +468,9 @@
                 <div class="carousel-cell">
                     <img src="./img/img-4.jpg" alt="">
                 </div>
+            </div>
+            <div class="progress">
+                <div class="progress-bar"></div>
             </div>
         </section>
 
