--- a/index.html
+++ b/index.html
@@ -454,24 +454,28 @@
             </div>
         </section>
 
-        <section class="slide-img">
-            <div class="more__img main-carousel">
-                <div class="carousel-cell">
-                    <img src="./img/img-1.jpg" alt="">
+        <section class="more_img">
+            <div class="swiper">
+                <div class="swiper-wrapper">
+                    <div class="swiper-slide">
+                        <img src="./img/img-1.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./img/img-2.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./img/img-3.jpg" alt="">
+                    </div>
+                    <div class="swiper-slide">
+                        <img src="./img/img-4.jpg" alt="">
+                    </div>
                 </div>
-                <div class="carousel-cell">
-                    <img src="./img/img-2.jpg" alt="">
-                </div>
-                <div class="carousel-cell">
-                    <img src="./img/img-3.jpg" alt="">
-                </div>
-                <div class="carousel-cell">
-                    <img src="./img/img-4.jpg" alt="">
-                </div>
+                <div class="swiper-scrollbar"></div>
             </div>
-            <div class="progress">
+
+            <!-- <div class="progress">
                 <div class="progress-bar"></div>
-            </div>
+            </div> -->
         </section>
 
     </main>
